# canbus-sender

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PORTABILITY_PLAN.md  README.md
proto/: journeyos_device.proto
src/: bridge.cpp  bridge.hpp  can_probe.cpp  can_probe.hpp  config.cpp  config.hpp  dhcp.cpp  dhcp.hpp  main.cpp  proto_io.cpp  proto_io.hpp
